--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
         /* 文章网格 */
         .articles-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-template-columns: repeat(4, 1fr);
             gap: 1rem;
             margin-bottom: 4rem;
         }
@@ -1054,6 +1054,12 @@
         }
 
         /* 响应式设计 */
+        @media (max-width: 1024px) {
+            .articles-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
         @media (max-width: 768px) {
             .social-link {
                 width: 48px;
@@ -1122,6 +1128,11 @@
 
             .articles-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .hero-content input[type="email"] {
+                width: 100%;
+                max-width: 300px;
             }
 
             .about-section {
@@ -2436,6 +2447,14 @@
             <p class="subscribe-note" style="margin-top: 1rem; color: var(--text-secondary); font-size: 0.9rem;">
                 <span data-zh="复制RSS链接到剪贴板" data-en="Click to copy RSS link">复制RSS链接到剪贴板</span>
             </p>
+            <!-- 邮箱订阅 -->
+            <div style="margin-top: 2rem; display: flex; flex-direction: column; align-items: center; gap: 1rem;">
+                <input type="email" id="subscribeEmail" placeholder="your@email.com" style="padding: 0.9rem 1.5rem; background: var(--bg-card); border: 1px solid var(--border); border-radius: 50px; color: var(--text-primary); font-size: 1rem; width: 300px;">
+                <button type="button" onclick="copySubscribeEmail()" style="padding: 0.9rem 2rem; background: var(--accent); color: white; border: none; border-radius: 50px; font-size: 1rem; font-weight: 600; cursor: pointer; width: auto;">订阅更新</button>
+            </div>
+            <p style="color: var(--text-secondary); font-size: 0.9rem; text-align: center; margin-top: 0.5rem;">
+                <span data-zh="点击复制邮箱地址，然后到邮件APP粘贴发送" data-en="Click to copy email, then paste in mail app">点击复制邮箱地址，然后到邮件APP粘贴发送</span>
+            </p>
         </div>
     </section>
 
@@ -2624,38 +2643,19 @@
                             </svg>
                         </div>
                         <a href="https://www.zhihu.com/people/home-tile" target="_blank" class="social-link platform-link zhihu">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="24" height="24">
-                                <circle cx="12" cy="12" r="10"></circle>
-                                <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
-                                <line x1="12" y1="17" x2="12.01" y2="17"></line>
-                            </svg>
+                            <img src="images/知乎logo.png" alt="知乎" style="width: 24px; height: 24px;">
                         </a>
                         <a href="https://www.jianshu.com/u/a18e6436d62b" target="_blank" class="social-link platform-link jianshu">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="24" height="24">
-                                <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-                                <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
-                            </svg>
+                            <img src="images/简书logo.png" alt="简书" style="width: 24px; height: 24px;">
                         </a>
                         <a href="https://mp.toutiao.com/profile_v4/graphic/publish" target="_blank" class="social-link platform-link toutiao">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="24" height="24">
-                                <line x1="8" y1="6" x2="21" y2="6"></line>
-                                <line x1="8" y1="12" x2="21" y2="12"></line>
-                                <line x1="8" y1="18" x2="21" y2="18"></line>
-                                <line x1="3" y1="6" x2="3.01" y2="6"></line>
-                                <line x1="3" y1="12" x2="3.01" y2="12"></line>
-                                <line x1="3" y1="18" x2="3.01" y2="18"></line>
-                            </svg>
+                            <img src="images/今日头条logo.png" alt="今日头条" style="width: 24px; height: 24px;">
                         </a>
                         <a href="https://sspai.com/u/4ig9d7yl/updates" target="_blank" class="social-link platform-link sspai">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="24" height="24">
-                                <polygon points="12 2 2 22 22 22"></polygon>
-                            </svg>
+                            <img src="images/少数派logo.png" alt="少数派" style="width: 24px; height: 24px;">
                         </a>
                         <a href="https://substack.com/@thinkingandwriting?" target="_blank" class="social-link platform-link substack">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="24" height="24">
-                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                                <polyline points="22,6 12,13 2,6"></polyline>
-                            </svg>
+                            <img src="images/substack平台logo.png" alt="Substack" style="width: 24px; height: 24px;">
                         </a>
                         <a href="mailto:littlelinthinks@gmail.com" class="social-link platform-link email">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="24" height="24">
@@ -4196,10 +4196,10 @@
         // 复制订阅邮箱
         function copySubscribeEmail() {
             const email = document.getElementById('subscribeEmail');
-            if (email && email.value) {
-                navigator.clipboard.writeText(email.value);
-                showToast('邮箱地址已复制，请到邮件APP发送！');
-            }
+            // 如果用户输入了邮箱，复制用户输入的；否则复制默认邮箱
+            const emailToCopy = (email && email.value.trim()) ? email.value.trim() : 'littlelinthinks@gmail.com';
+            navigator.clipboard.writeText(emailToCopy);
+            showToast('邮箱地址已复制，请到邮件APP发送！');
         }
 
         function updateSelectedAmount() {
