优化资源销售页面,创建美观的products.html

--- a/index.html
+++ b/index.html
@@ -2410,9 +2410,9 @@
                             <span class="dropdown-arrow">▼</span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="销售页面.html#writing" data-zh="写作套装（¥99）" data-en="Writing Bundle (¥99)">写作套装（¥99）</a></li>
-                            <li><a href="销售页面.html#goals" data-zh="目标套装（¥79）" data-en="Goal Bundle (¥79)">目标套装（¥79）</a></li>
-                            <li><a href="销售页面.html" data-zh="完整套装（¥129）" data-en="Complete Bundle (¥129)">完整套装（¥129）</a></li>
+                            <li><a href="products.html#writing" data-zh="写作套装（¥99）" data-en="Writing Bundle (¥99)">写作套装（¥99）</a></li>
+                            <li><a href="products.html#goals" data-zh="目标套装（¥79）" data-en="Goal Bundle (¥79)">目标套装（¥79）</a></li>
+                            <li><a href="products.html" data-zh="完整套装（¥129）" data-en="Complete Bundle (¥129)">完整套装（¥129）</a></li>
                             <li style="border-top: 1px solid var(--border); margin-top: 0.5rem; padding-top: 0.5rem;"><a href="#" data-zh="即将推出" data-en="Coming Soon" style="color: var(--text-secondary); cursor: not-allowed;">即将推出：课程/会员/企业培训</a></li>
                         </ul>
                     </li>
@@ -2590,21 +2590,21 @@
                     <div class="resource-icon">📚</div>
                     <h3 class="resource-title" data-zh="写作套装" data-en="Writing Bundle">写作套装</h3>
                     <p class="resource-description" data-zh="30+写作模板、100+爆款标题、Newsletter运营指南，快速提升写作能力" data-en="30+ writing templates, 100+ viral titles, Newsletter guide to boost writing quickly">30+写作模板、100+爆款标题、Newsletter运营指南，快速提升写作能力</p>
-                    <a href="销售页面.html#writing" class="resource-link" data-zh="¥99 购买 →" data-en="¥99 Buy →">¥99 购买 →</a>
+                    <a href="products.html#writing" class="resource-link" data-zh="¥99 购买 →" data-en="¥99 Buy →">¥99 购买 →</a>
                 </div>
 
                 <div class="resource-card" id="resource-writing">
                     <div class="resource-icon">🎯</div>
                     <h3 class="resource-title" data-zh="目标套装" data-en="Goal Bundle">目标套装</h3>
                     <p class="resource-description" data-zh="Notion目标系统、年度规划PDF、Excel追踪表，让梦想变成现实" data-en="Notion goal system, annual planning PDF, Excel tracker to turn dreams into reality">Notion目标系统、年度规划PDF、Excel追踪表，让梦想变成现实</p>
-                    <a href="销售页面.html#goals" class="resource-link" data-zh="¥79 购买 →" data-en="¥79 Buy →">¥79 购买 →</a>
+                    <a href="products.html#goals" class="resource-link" data-zh="¥79 购买 →" data-en="¥79 Buy →">¥79 购买 →</a>
                 </div>
 
                 <div class="resource-card" id="resource-goals">
                     <div class="resource-icon"💎</div>
                     <h3 class="resource-title" data-zh="完整套装" data-en="Complete Bundle">完整套装</h3>
                     <p class="resource-description" data-zh="写作+目标管理，7个即用型产品，原价¥265，限时特惠¥129" data-en="Writing + Goal Management, 7 ready-to-use products, original price ¥265, limited offer ¥129">写作+目标管理，7个即用型产品，原价¥265，限时特惠¥129</p>
-                    <a href="销售页面.html" class="resource-link" style="background: linear-gradient(135deg, #3b82f6, #8b5cf6);" data-zh="¥129 立即购买 →" data-en="¥129 Buy Now →">¥129 立即购买 →</a>
+                    <a href="products.html" class="resource-link" style="background: linear-gradient(135deg, #3b82f6, #8b5cf6);" data-zh="¥129 立即购买 →" data-en="¥129 Buy Now →">¥129 立即购买 →</a>
                 </div>
 
                 <div class="resource-card" id="resource-learning">
