修复支付按钮,显示支付二维码而不是跳转邮件

--- a/products.html
+++ b/products.html
@@ -449,16 +449,27 @@
 
         <div class="footer" id="payment">
             <h3>💳 支付方式</h3>
-            <p>选择下方支付方式,完成后发送截图给我们即可</p>
+            <p>选择下方支付方式,完成后截图联系客服</p>
 
-            <div style="margin-top: 30px;">
-                <div class="buttons" style="justify-content: center;">
-                    <a href="mailto:littlelinthinks@gmail.com?subject=购买资源套装&body=我已支付,请发送资源。" class="btn btn-alipay">
-                        支付宝支付 ¥159
-                    </a>
-                    <a href="mailto:littlelinthinks@gmail.com?subject=购买资源套装&body=我已支付,请发送资源。" class="btn btn-wechat">
-                        微信支付 ¥159
-                    </a>
+            <div style="margin-top: 30px; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
+                <!-- 支付宝 -->
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #1677ff; font-size: 1.3rem;">支付宝支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/alipay-qr.png" alt="支付宝收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.2rem;">¥159</p>
+                    <p style="margin-top: 10px; color: #666; font-size: 0.9rem;">扫码支付后截图联系客服</p>
+                </div>
+
+                <!-- 微信支付 -->
+                <div style="text-align: center; padding: 30px; background: #f8f9fa; border-radius: 15px;">
+                    <h4 style="margin-bottom: 15px; color: #07c160; font-size: 1.3rem;">微信支付</h4>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                        <img src="./images/wechat-qr.png" alt="微信收款码" style="width: 200px; max-width: 100%;">
+                    </div>
+                    <p style="margin-top: 15px; font-weight: bold; color: #333; font-size: 1.2rem;">¥159</p>
+                    <p style="margin-top: 10px; color: #666; font-size: 0.9rem;">扫码支付后截图联系客服</p>
                 </div>
             </div>
 
