配置GitHub Client ID到Gitalk评论系统

--- a/article.html
+++ b/article.html
@@ -259,11 +259,11 @@
         // 加载 Gitalk 评论系统
         function loadGitalk() {
             const gitalk = new Gitalk({
-                clientID: 'YOUR_GITHUB_CLIENT_ID', // 替换为你的 GitHub Client ID
-                clientSecret: 'YOUR_GITHUB_CLIENT_SECRET', // 替换为你的 GitHub Client Secret
-                repo: 'thecolin-blog', // 替换为你的仓库名称
-                owner: 'littlelinthinks', // 替换为你的 GitHub 用户名
-                admin: ['littlelinthinks'], // 替换为你的 GitHub 用户名
+                clientID: 'Ov23lipyoe0GkAf2X42d', // GitHub Client ID
+                clientSecret: '', // GitHub Client Secret (可选,主要用于服务端)
+                repo: 'thecolin-blog', // 仓库名称
+                owner: 'littlelinthinks', // GitHub 用户名
+                admin: ['littlelinthinks'], // GitHub 用户名
                 id: window.location.pathname, // 使用页面路径作为评论ID
                 distractionFreeMode: false,
                 language: 'zh-CN',
