Update featured resources section to 4 categories matching navigation

--- a/index.html
+++ b/index.html
@@ -2669,60 +2669,32 @@
         <div class="featured-resources">
             <h2 class="section-title" data-zh="精选资源" data-en="Featured Resources">精选资源</h2>
             <div class="resources-grid">
-                <div class="resource-card" id="resource-thinking">
-                    <div class="resource-icon">📚</div>
-                    <h3 class="resource-title" data-zh="写作套装" data-en="Writing Bundle">写作套装</h3>
-                    <p class="resource-description" data-zh="30+写作模板、100+爆款标题、Newsletter运营指南，快速提升写作能力" data-en="30+ writing templates, 100+ viral titles, Newsletter guide to boost writing quickly">30+写作模板、100+爆款标题、Newsletter运营指南，快速提升写作能力</p>
-                    <a href="products.html#writing" class="resource-link" data-zh="¥99 购买 →" data-en="¥99 Buy →">¥99 购买 →</a>
-                </div>
-
                 <div class="resource-card" id="resource-writing">
-                    <div class="resource-icon">🎯</div>
-                    <h3 class="resource-title" data-zh="目标套装" data-en="Goal Bundle">目标套装</h3>
-                    <p class="resource-description" data-zh="Notion目标系统、年度规划PDF、Excel追踪表，让梦想变成现实" data-en="Notion goal system, annual planning PDF, Excel tracker to turn dreams into reality">Notion目标系统、年度规划PDF、Excel追踪表，让梦想变成现实</p>
-                    <a href="products.html#goals" class="resource-link" data-zh="¥79 购买 →" data-en="¥79 Buy →">¥79 购买 →</a>
+                    <div class="resource-icon">✍️</div>
+                    <h3 class="resource-title" data-zh="写作指南" data-en="Writing Guides">写作指南</h3>
+                    <p class="resource-description" data-zh="30+写作模板、100+爆款标题、Newsletter运营指南，快速提升写作能力" data-en="30+ writing templates, 100+ viral titles, Newsletter guide to boost writing quickly">30+写作模板、100+爆款标题、Newsletter运营指南，快速提升写作能力</p>
+                    <a href="products.html#writing" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
                 </div>
 
                 <div class="resource-card" id="resource-goals">
-                    <div class="resource-icon"💎</div>
-                    <h3 class="resource-title" data-zh="完整套装" data-en="Complete Bundle">完整套装</h3>
-                    <p class="resource-description" data-zh="写作+目标管理，7个即用型产品，原价¥265，限时特惠¥129" data-en="Writing + Goal Management, 7 ready-to-use products, original price ¥265, limited offer ¥129">写作+目标管理，7个即用型产品，原价¥265，限时特惠¥129</p>
-                    <a href="products.html" class="resource-link" style="background: linear-gradient(135deg, #3b82f6, #8b5cf6);" data-zh="¥129 立即购买 →" data-en="¥129 Buy Now →">¥129 立即购买 →</a>
+                    <div class="resource-icon">🎯</div>
+                    <h3 class="resource-title" data-zh="目标规划" data-en="Goal Planning">目标规划</h3>
+                    <p class="resource-description" data-zh="Notion目标系统、年度规划PDF、Excel追踪表，让梦想变成现实" data-en="Notion goal system, annual planning PDF, Excel tracker to turn dreams into reality">Notion目标系统、年度规划PDF、Excel追踪表，让梦想变成现实</p>
+                    <a href="products.html#goals" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
+                </div>
+
+                <div class="resource-card" id="resource-thinking">
+                    <div class="resource-icon">💭</div>
+                    <h3 class="resource-title" data-zh="思维模型" data-en="Thinking Models">思维模型</h3>
+                    <p class="resource-description" data-zh="第一性原理、逆向思维、系统思考等核心思维模型，提升决策质量" data-en="First principles, reverse thinking, systems thinking and other core thinking models to improve decision quality">第一性原理、逆向思维、系统思考等核心思维模型，提升决策质量</p>
+                    <a href="products.html#thinking" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
                 </div>
 
                 <div class="resource-card" id="resource-learning">
                     <div class="resource-icon">📚</div>
-                    <h3 class="resource-title" data-zh="免费资源库" data-en="Free Resources">免费资源库</h3>
-                    <p class="resource-description" data-zh="思维模型、写作指南、学习方法等8大类别免费资源" data-en="Thinking models, writing guides, learning methods and other 8 categories of free resources">思维模型、写作指南、学习方法等8大类别免费资源</p>
-                    <a href="#" class="resource-link" data-zh="免费获取 →" data-en="Get Free →">免费获取 →</a>
-                </div>
-
-                <div class="resource-card" id="resource-productivity">
-                    <div class="resource-icon">🎓</div>
-                    <h3 class="resource-title" data-zh="写作课程" data-en="Writing Course">写作课程</h3>
-                    <p class="resource-description" data-zh="36课时视频课程，从0到1建立写作系统，即将推出" data-en="36-lesson video course, build writing system from scratch, coming soon">36课时视频课程，从0到1建立写作系统，即将推出</p>
-                    <span class="resource-link" style="background: var(--bg-card); border: 1px solid var(--border); cursor: not-allowed;" data-zh="敬请期待" data-en="Coming Soon">敬请期待</span>
-                </div>
-
-                <div class="resource-card" id="resource-finance">
-                    <div class="resource-icon">🎯</div>
-                    <h3 class="resource-title" data-zh="目标课程" data-en="Goal Course">目标课程</h3>
-                    <p class="resource-description" data-zh="目标达成大师课，从设定到实现，即将推出" data-en="Goal Achievement Master Course, from setting to achieving, coming soon">目标达成大师课，从设定到实现，即将推出</p>
-                    <span class="resource-link" style="background: var(--bg-card); border: 1px solid var(--border); cursor: not-allowed;" data-zh="敬请期待" data-en="Coming Soon">敬请期待</span>
-                </div>
-
-                <div class="resource-card" id="resource-health">
-                    <div class="resource-icon">🎁</div>
-                    <h3 class="resource-title" data-zh="会员计划" data-en="Membership">会员计划</h3>
-                    <p class="resource-description" data-zh="年度会员¥999，包含所有课程+1对1辅导+工作坊，即将推出" data-en="Annual membership ¥999, includes all courses + 1-on-1 coaching + workshops, coming soon">年度会员¥999，包含所有课程+1对1辅导+工作坊，即将推出</p>
-                    <span class="resource-link" style="background: var(--bg-card); border: 1px solid var(--border); cursor: not-allowed;" data-zh="敬请期待" data-en="Coming Soon">敬请期待</span>
-                </div>
-
-                <div class="resource-card" id="resource-career">
-                    <div class="resource-icon">💼</div>
-                    <h3 class="resource-title" data-zh="企业培训" data-en="Corporate Training">企业培训</h3>
-                    <p class="resource-description" data-zh="写作培训、目标管理培训，适合企业团建，即将推出" data-en="Writing training, goal management training, suitable for corporate team building, coming soon">写作培训、目标管理培训，适合企业团建，即将推出</p>
-                    <span class="resource-link" style="background: var(--bg-card); border: 1px solid var(--border); cursor: not-allowed;" data-zh="敬请期待" data-en="Coming Soon">敬请期待</span>
+                    <h3 class="resource-title" data-zh="学习方法" data-en="Learning Methods">学习方法</h3>
+                    <p class="resource-description" data-zh="费曼学习法、间隔重复、深度阅读等高效学习方法，加速知识吸收" data-en="Feynman technique, spaced repetition, deep reading and other efficient learning methods to accelerate knowledge absorption">费曼学习法、间隔重复、深度阅读等高效学习方法，加速知识吸收</p>
+                    <a href="products.html#learning" class="resource-link" data-zh="查看详情 →" data-en="View Details →">查看详情 →</a>
                 </div>
             </div>
         </div>
